--- a/buildspec.yml
+++ b/buildspec.yml
@@ -35,6 +35,7 @@ phases:
       - printf '[{"name":"simple_jwt_api","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
       - pwd
       - ls
+      - pip3 install typing
       - pip3 install pytest
       - python3 test_main.py
 artifacts:
