--- a/buildspec.yml
+++ b/buildspec.yml
@@ -40,7 +40,7 @@ phases:
       - ls
       - python3 -V
       - pip3 install typing
-      - pip3 install pytest
+      - pip3 install "pytest<5"
       - python3 test_main.py
 artifacts:
   files: build.json
