--- a/buildspec.yml
+++ b/buildspec.yml
@@ -41,7 +41,7 @@ phases:
       - python3 -V
       - pip3 install typing
       - pip3 install "pytest<5"
-      - pip3 install jwt
+      - pip3 install pypi
       - python3 test_main.py
 artifacts:
   files: build.json
