--- a/buildspec.yml
+++ b/buildspec.yml
@@ -41,6 +41,7 @@ phases:
       - python3 -V
       - pip3 install typing
       - pip3 install "pytest<5"
+      - pip3 install setuptools
       - pip3 install cryptography
       - pip3 install jwt
       - python3 test_main.py
