--- a/buildspec.yml
+++ b/buildspec.yml
@@ -43,7 +43,7 @@ phases:
       - pip3 install typing
       - pip3 install "pytest<5"
       - pip3 install virtualenv --upgrade
-      - pip3 install setuptools
+      - pip3 install --upgrade setuptools
       - pip3 install cryptography
       - pip3 install jwt
       - python3 test_main.py
