--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,6 +25,7 @@ phases:
   build:
     commands:
       - docker build --tag $REPOSITORY_URI:$TAG .
+      - python3 test_main.py
   post_build:
     commands:
       - docker push $REPOSITORY_URI:$TAG
